@@ -286,14 +286,22 @@ public:
   void setAprilTagPoseEstimationMethod(const vpPoseEstimationMethod &poseEstimationMethod);
   void setAprilTagQuadDecimate(float quadDecimate);
   void setAprilTagQuadSigma(float quadSigma);
-  void setAprilTagRefineDecode(bool refineDecode);
   void setAprilTagRefineEdges(bool refineEdges);
-  void setAprilTagRefinePose(bool refinePose);
 
+#if defined(VISP_BUILD_DEPRECATED_FUNCTIONS)
   /*!
-   * Allow to enable the display of overlay tag information in the windows
-   * (vpDisplay) associated to the input image.
+   * @name Deprecated functions
    */
+  //@{
+  vp_deprecated void setAprilTagRefineDecode(bool refineDecode);
+  vp_deprecated void setAprilTagRefinePose(bool refinePose);
+  //@}
+#endif
+
+/*!
+ * Allow to enable the display of overlay tag information in the windows
+ * (vpDisplay) associated to the input image.
+ */
   inline void setDisplayTag(bool display, const vpColor &color = vpColor::none, unsigned int thickness = 2)
   {
     m_displayTag = display;
