@@ -28,6 +28,7 @@ ViSP 3.x.x (Version in development)
     . [#1270] Build issue around std::clamp and optional header which are not found with cxx17
       standard enabled
     . [#1272] Unable to build ViSP with PCL/VTK build from source, VTK headers are not found by ViSP
+    . [#1273] Build error in visp_java without deprecated functionalities
 ----------------------------------------------
 ViSP 3.6.0 (released September 22, 2023)
   - Contributors:
